Fix images overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -186,6 +186,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .embla__dot {
